--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@11ty/eleventy-navigation": "^0.1.3",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.1.0",
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
-    "markdown-it-anchor": "^5.2.5",
-    "gulp": "^4.0.2",
-    "gulp-sass": "^5.1.0"
+    "markdown-it-anchor": "^5.2.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "markdown-it-attrs": "^4.1.6"
+  }
 }
