--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "eleventy",
     "watch": "eleventy --watch",
     "serve": "eleventy --serve",
-    "dev": "gulp build & gulp watch & eleventy --serve",
+    "dev": "eleventy watch & eleventy --serve",
     "debug": "DEBUG=* eleventy"
   },
   "repository": {
