--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "build": "eleventy",
     "watch": "eleventy --watch",
     "serve": "eleventy --serve",
-    "dev": "eleventy watch & eleventy --serve",
     "debug": "DEBUG=* eleventy"
   },
   "repository": {
@@ -21,14 +20,15 @@
   "license": "MIT",
   "homepage": "https://martindm.uk/",
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0",
+    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-img": "^4.0.2",
     "@11ty/eleventy-navigation": "^0.1.3",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
-    "gulp": "^4.0.2",
+    "gulp": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "luxon": "^1.21.3",
-    "markdown-it": "^8.4.2",
+    "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^5.2.5"
   },
   "dependencies": {
