--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "eleventy",
     "watch": "eleventy --watch",
-    "serve": "eleventy --serve",
+    "dev": "eleventy --serve",
     "debug": "DEBUG=* eleventy"
   },
   "repository": {
@@ -14,7 +14,7 @@
   },
   "author": {
     "name": "Martin di Martino-Marriott",
-    "email": "hello@martindm.uk",
+    "email": "martindm.dev@gmail.com",
     "url": "https://martindm.uk/"
   },
   "license": "MIT",
