--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "license": "MIT",
   "homepage": "https://martindm.uk/",
+  "engines": {
+    "node": ">=18"
+  },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "@11ty/eleventy-img": "^4.0.2",
-    "@11ty/eleventy-navigation": "^0.1.3",
-    "@11ty/eleventy-plugin-rss": "^1.0.7",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
+    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-img": "^5.0.0",
+    "@11ty/eleventy-navigation": "^0.3.5",
+    "@11ty/eleventy-plugin-rss": "^2.0.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "luxon": "^1.21.3",
     "markdown-it": "^14.1.0",
     "sass": "^1.77.0"
